--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calc_wad)
 export(create_filters)
 export(explore_filters)
 export(filter_qsip)
+export(initialize)
 export(nmeasure)
 export(nrep)
 export(plot_curve)
