Re-arranged documentation order to fix namespace issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(calc_wad)
 export(create_filters)
 export(explore_filters)
 export(filter_qsip)
-export(initialize)
 export(nmeasure)
 export(nrep)
 export(plot_curve)
@@ -18,5 +17,6 @@ export(read_qiime2_tax)
 export(specify_qsip)
 exportClasses(phylosip)
 exportClasses(qsip)
+exportMethods(initialize)
 exportMethods(show)
 importClassesFrom(phyloseq,phyloseq)
